--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 				<div class="resume-header">
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
-							<h2 class="resume-name mb-0 text-uppercase">Simon Doe</h2>
-							<div class="resume-tagline mb-3 mb-md-0">Senior Software Engineer</div>
+							<h2 class="resume-name mb-0 text-uppercase">Alexandra Wallgren</h2>
+							<div class="resume-tagline mb-3 mb-md-0">Certified Genetic Counselor</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">0123 4567 890</a></li>
-								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">simon@yourwebsite.com</a></li>
+								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">alexandra.wallgren@unmc.edu</a></li>
 								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="#">www.yourwebsite.com</a></li>
-								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>New York</li>
+								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Omaha, NE</li>
 							</ul>
 						</div><!--//resume-contact-->
 					</div><!--//row-->
@@ -49,11 +49,11 @@
 				<div class="resume-intro py-3">
 					<div class="row align-items-center">
 						<div class="col-12 col-md-3 col-xl-2 text-center">
-						    <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto" src="assets/images/resume-profile.png" alt="image">
+						    <img class="resume-profile-image mb-3 mb-md-0 me-md-5  ms-md-0 rounded mx-auto" src="assets/images/alexandra-wallgren.jpg" alt="image">
 						</div>
 						
 						<div class="col text-start">
-							<p class="mb-0">Summarise your career here. <a class="theme-link" href="https://themes.3rdwavemedia.com/resources/sketch-template/resume-sketch-sketch-resume-template-for-software-developers/" target="_blank">You can make a PDF version of your resume using our free Sketch template here</a>. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. </p>
+							<p class="mb-0"> About me here </p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
@@ -203,14 +203,16 @@
 										<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-3">
-												<div class="resume-degree font-weight-bold">MSc in Computer Science</div>
-												<div class="resume-degree-org text-muted">University College London</div>
-												<div class="resume-degree-time text-muted">2010 - 2011</div>
+												<div class="resume-degree font-weight-bold">MSc in Genetic Counseling</div>
+												<div class="resume-degree-org text-muted">University of Minnesota</div>
+												<div class="resume-degree-org text-muted">Mayo Clinic School of Health Sciences</div>
+												<div class="resume-degree-time text-muted">2017 - 2019</div>
 											</li>
 											<li>
-												<div class="resume-degree font-weight-bold">BSc Maths and Physics</div>
-												<div class="resume-degree-org text-muted">Imperial College London</div>
-												<div class="resume-degree-time text-muted">2007 - 2010</div>
+												<div class="resume-degree font-weight-bold">BSc Biology</div>
+												<div class="resume-degree font-weight-bold">Minor in Hispanic and Spanish Studies</div>
+												<div class="resume-degree-org text-muted">Creighton University</div>
+												<div class="resume-degree-time text-muted">2013 - 2017</div>
 											</li>
 										</ul>
 									</section><!--//education-section-->
@@ -218,12 +220,12 @@
 										<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
 										<ul class="list-unstyled resume-awards-list">
 											<li class="mb-3">
-												<div class="font-weight-bold">Award Lorem Ipsum</div>
-												<div class="text-muted">Microsoft lorem ipsum (2019)</div>
+												<div class="font-weight-bold">Clare Boothe Luce Scholarship</div>
+												<div class="text-muted">2018 - 2019 recipient</div>
 											</li>
 											<li>
-												<div class="font-weight-bold">Award Donec Sodales</div>
-												<div class="text-muted">Oracle Aenean (2017)</div>
+												<div class="font-weight-bold">Most Outstanding Biology Student</div>
+												<div class="text-muted">Creighton Biology Department (2019)</div>
 											</li>
 										</ul>
 									</section><!--//education-section-->
@@ -237,8 +239,8 @@
 									<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
-											<li class="mb-2">Climbing</li>
-											<li class="mb-2">Snowboarding</li>
+											<li class="mb-2">Certified Yoga Instructor</li>
+											<li class="mb-2">Oil Painting</li>
 											<li class="mb-2">Photography</li>
 											<li>Travelling</li>
 										</ul>
